<resources>
    <string name="app_name">JimmieJobs Provider</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="error_response_null">Can\'t connect to Server</string>
    <string name="error_no_internet">Its Seems Internet is not available</string>
    <string name="string_main">The Homepage is a display of all service providers within your area based on their last known location.You can filter the providers by selecting a category that you want and only the service providers offering services in that category will appear. You can also pinch the screen to zoom in. Hold your finger and move it in any direction to show other areas.
</string>
    <string name="register_in_with_facebook">Register in with Facebook</string>
    <string name="register_in_with_google">Register in with Google</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">New Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="contact_no_hint">Contact No</string>
    <string name="address_hint">Address</string>
    <string name="hax_value">&#x24;</string>
    <string name="CANCEL">Cancel</string>
    <string name="OK">OK</string>
    <string name="forget_pass">Forget Password ?</string>
    <string name="send">SEND</string>
    <string name="error_email">Please Enter Valid Email id</string>
    <string name="forget_password_done">Please check Email id.</string>
    <string name="login_with_facebook">Sign in with Facebook</string>
    <string name="login_with_google">Sign in with Google</string>
    <string name="do_not_have_account_yet">Do not have account yet ?</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="register_button_text">Register</string>
    <string name="mobile_no">Mobile no</string>
    <string name="have_account">Have account ?</string>
    <string name="Location_not_enable">Location not enabled!</string>
    <string name="provider_location">Provider Location</string>
    <string name="waiting_address">Waiting For Address..</string>
    <string name="dialog_no_internet">No Internet</string>
    <string name="dialog_no_internet_message">You have not active internet connection</string>
    <string name="dialog_enalble_wifi">ENABLE WIFI </string>
    <string name="dialog_exit">EXIT</string>
    <string name="dialog_enable_data_pack">ENABLE 3G</string>
    <string name="dialog_no_gps">NO GPS</string>
    <string name="dialog_no_gps_message">Your GPS seems to be disabled, do you want to enable it ?</string>
    <string name="dialog_enable_gps">ENABLE GPS</string>
    <string name="error_1">Password must not be blank.</string>
    <string name="error_2">Please enter valid Email ID.</string>
    <string name="error_3">Please enter Your name.</string>
    <string name="error_4">Please enter Mobile Number.</string>
    <string name="error_5">For Internal use? Insert device dype</string>
    <string name="error_6">Email id is already registered.</string>
    <string name="error_7">Social unique id not generated, Please try again.</string>
    <string name="error_8">Not a registered Social Unique ID.</string>
    <string name="error_9">Session is expired, please re-login to your account.</string>
    <string name="error_10">Provider not found, please re-login to your account.</string>
    <string name="error_11">Your Login attempt failed. The Email ID or password may be incorrect.</string>
    <string name="error_12">Location points are missing</string>
    <string name="error_13">Types are not selected</string>
    <string name="error_14">New Password is required.</string>
    <string name="error_15">Incorrect old password.</string>
    <string name="error_16">New Version of Application is available please update your application.</string>
    <string name="error_17">Please select request ID.</string>
    <string name="error_18">Quote amount is required</string>
    <string name="error_19">Quote already submitted by you please try for another job.</string>
    <string name="error_20">Request not found please try again. Job might be deleted, Please Refresh List.</string>
    <string name="error_21">Quotation is not found for that request.</string>
    <string name="error_22">You have already clicked on the way button</string>
    <string name="error_23">You have already clicked on arrived button</string>
    <string name="error_24">You have already clicked on started job button</string>
    <string name="error_25">You have already clicked on Job Done button</string>
    <string name="error_26">Payment is not completed please inform the customer.</string>
    <string name="error_27">Request was not completed by you.</string>
    <string name="error_28">Sorry, the job is not completed.</string>
    <string name="error_29">Please select type first to get available jobs.</string>
    <string name="error_30">Sorry, Now you can\'t cancel the request.</string>
    <string name="error_31">Sorry, You are declined as a provider. Please contact to admin.</string>
    <string name="error_email_require">Email Id Require</string>
    <string name="error_password_require">Password Require</string>
    <string name="error_confirm_password_require">Confirm Password Require</string>
    <string name="error_name_require">Name Require</string>
    <string name="error_password_not_matched">Password Does not matched</string>
    <string name="error_emal_valid_require">Please Enter Valid Email Id</string>
    <string name="error_password_min_require">Password should be At least 6 charater need</string>
    <string name="error_phon_number_reauire">Phone Number Require</string>
    <string name="error_password_match">Password should match</string>
    <string name="error_address_require">Address Require</string>
    <string name="dialog_chose_picture">Chose Picture</string>
    <string name="dialog_chose_gallary">Gallery</string>
    <string name="dialog_chose_camera">Camera</string>
    <string name="error_select_image">Unable to select image</string>
    <string name="toolbar_sigin_in">Sign in</string>
    <string name="toolbar_register">Register</string>
    <string name="toolbar_map">Home</string>
    <string name="toolbar_profile">Profile</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_log_out">Logout</string>
    <string name="dialog_logout">Logout</string>
    <string name="dialog_logout_cancel">CANCEL</string>
    <string name="dialog_logout_ok">Logout</string>
    <string name="dialog_logout_message">Are you sure ?</string>
    <string name="dialog_approve_message">Your application is under review \n kindly wait for admin Approval..!</string>
    <string name="dialog_approve_title">Alert</string>
    <string name="dialog_approve_btn">EXIT</string>
    <string name="select_provider_type">Select Type</string>
    <string name="submit_type">SUBMIT</string>
    <string name="update_type">Update Type</string>
    <string name="please_selece_provioder_type">Please Select Provider Type</string>
    <string name="provider_type">Provider Type</string>
    <string name="available_job">Available jobs</string>
    <string name="miles_away">KM\naway</string>
    <string name="provide_quote">Provide Quote</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="away"> \n away</string>
    <string name="job_type_repair">Repair/maintenance</string>
    <string name="job_type_installation">Installation</string>
    <string name="add_price">Add Pricing</string>
    <string name="add_eta">Add ETA</string>
    <string name="provider_quote_submit">Submit</string>
    <string name="provide_quote_message">You will see this  job at view quotes page. </string>
    <string name="admin_price_for_dialog">*Admin price for this Service is </string>
    <string name="provide_quote_hint_add_pricing">Add Pricing</string>
    <string name="provide_quote_hint_ETA">ETA</string>
    <string name="error_add_price">Price Require</string>
    <string name="error_price_zero">Price can not be Zero.</string>
    <string name="error_price_more">Price can not be more than 5 Digit</string>
    <string name="error_admin_price">Price Can not be less or equal than Admin price</string>
    <string name="error_ETA">Estimated Time for Arrival Require</string>
    <string name="sucesfully_submited">Your Quote Successfully Submitted"</string>
    <string name="job_posted_by">Job posted by</string>
    <string name="view_quote">View Quotes</string>
    <string name="view_quote_info">View Quote</string>
    <string name="canecl_quote">Cancel Quote</string>
    <string name="cancel_quote_dialog_message">Are you sure \n Do you want to Cancel Quote ?</string>
    <string name="cancel_quote_btn_ok">OK</string>
    <string name="cancel_job">Cancel Job</string>
    <string name="my_job">My jobs</string>
    <string name="my_job_info">My job</string>
    <string name="active_job">Active Job</string>
    <string name="previous_job">Previous Job</string>
    <string name="active">Job Requests</string>
    <string name="previous">Previous</string>
    <string name="you_will_receive">You will\n Receive</string>
    <string name="provider_confirm">Provider confirm</string>
    <string name="provider_on_the_way">Start Trip</string>
    <string name="provider_arrived">Arrived</string>
    <string name="provider_job_start">Job Start</string>
    <string name="provider_job_done">Job Done</string>
    <string name="you_received">You \n Received</string>
    <string name="cancel_by_user">Cancel by User</string>
    <string name="cancel_by_you">Cancel by You</string>
    <string name="statistics">Statistics</string>
    <string name="profile_edit">Profile Edit</string>
    <string name="upcoming_appoi">Upcoming \nAppointments</string>
    <string name="earning">Earnings</string>
    <string name="appointments">Appointments</string>
    <string name="this_week">This Week</string>
    <string name="this_year">This Year</string>
    <string name="feedback">Feedback</string>
    <string name="load_more">Load More</string>
    <string name="job_completed">Job Completed !</string>
    <string name="rate_your_customer">Rate your Customer</string>
    <string name="noe_feedback">No feedback from user</string>
    <string name="country_code">+27</string>
    <string name="address">Address</string>
    <string name="profile">Profile</string>
    <string name="profile_update">Profile Update Successfully</string>
    <string name="current_password">Current Password</string>
    <string name="verify_account">Verify Account</string>
    <string name="profile_update_ok">OK</string>
    <string name="internet_dialog_title">Alert</string>
    <string name="internet_dialog_message">Your Internet seems to be disabled, You must enable it.</string>
    <string name="gps_dialog_message">Your Location Service seems to be disable. you must enable it.</string>
    <string name="no_data_viewQuote">No Quote Available</string>
    <string name="no_dat_activeJob">No Job Available</string>
    <string name="exit_dialog_title">Exit</string>
    <string name="exit_dialog_message">Are you sure ?</string>
    <string name="location_dialog_message">You can not Use this application without this permission.You need to enable Permission</string>
    <string name="location_dialog_exit">EXIT</string>
    <string name="location_neverask_message">if you want to use this app you must enable permisison in system permission setting.</string>
    <string name="password">Password</string>
    <string name="profile_description">Profile Description. The Profile Description should not exceed 50 characters</string>
</resources>