<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_image"
    android:orientation="vertical">

    <include layout="@layout/custom_tool_bar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/content_padding">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.tradesman.provider.component.MyFontOpenRegEditText
                android:id="@+id/edtEmail"
                style="@style/editTextBox"
                android:drawableLeft="@drawable/email_icon"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/editTextHintColor" />


            <com.tradesman.provider.component.MyFontOpenRegEditText
                android:id="@+id/edtPassword"
                style="@style/editTextBox"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/password_icon"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/editTextHintColor" />


            <com.tradesman.provider.component.MyFontOpenRegTextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/forgot_password_text_size" />


            <com.tradesman.provider.component.MyFontOpenRegButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button_shape"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/whiteColor"
                android:textSize="@dimen/text_size_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="@dimen/marging_bottom_10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.tradesman.provider.component.MyFontOpenRegTextView
                android:id="@+id/tvDoNotHaveAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_not_have_account_yet"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/do_not_have_account_textsize" />

           <com.tradesman.provider.component.MyFontRaidProBoldTextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/colorPrimary"
               android:textSize="@dimen/register_txt_size"
               android:padding="@dimen/register_padding"

               android:id="@+id/txtRegistertext"
               android:textStyle="bold"
               android:text="@string/register"/>

        </LinearLayout>






    </LinearLayout>

</LinearLayout>
