<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/provider_type_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
      android:orientation="vertical"
    tools:context="com.tradesman.provider.ProviderTypeActivity">

   <include
       layout="@layout/custom_tool_bar"/>

   <TextView
       android:text="@string/select_provider_type"
       android:textSize="@dimen/dialog_title_size"
       android:layout_marginTop="@dimen/margin_10"
       android:layout_gravity="center"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />

   <android.support.v7.widget.RecyclerView
       android:layout_weight="1"
      android:layout_marginTop="@dimen/margin_10"
       android:layout_below="@+id/toolbar"
       android:id="@+id/recycler_view"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

   </android.support.v7.widget.RecyclerView>

   <Button
       android:id="@+id/btn_submit_provider_type"
       android:textColor="@color/whiteColor"
       android:background="@color/colorPrimary"
       android:text="@string/submit_type"
       android:textSize="@dimen/dialog_btn_size"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" />

   <Button
       android:visibility="gone"
       android:id="@+id/btn_update_provider_type"
       android:textColor="@color/whiteColor"
       android:background="@color/colorPrimary"
       android:text="@string/update_type"
       android:textSize="@dimen/dialog_btn_size"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" />

</LinearLayout>
