<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/bg_image"
    android:orientation="vertical">

    <include
        layout="@layout/custom_tool_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_editext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15dp"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imgUserPhoto"
                        android:layout_width="@dimen/profile_pic_size"
                        android:layout_height="@dimen/profile_pic_size"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/margin_15dp"
                        android:src="@drawable/user_register"
                        app:civ_border_color="@color/editTextHintColor"
                        app:civ_border_width="1dp" />


                    <com.tradesman.provider.component.MyFontOpenRegEditText
                        android:id="@+id/edtRegisterUseName"
                        style="@style/editTextBox"
                        android:drawableLeft="@drawable/profile_icon"
                        android:hint="@string/name_hint"
                        android:inputType="textNoSuggestions"
                        android:textColorHint="@color/editTextHintColor" />

                    <EditText
                        android:id="@+id/edtRegisterUDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        style="@style/editTextBox"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                        android:hint="@string/profile_description"
                        android:maxLength="50"
                        android:fontFamily="sans-serif-condensed"
                        android:minLines="2"
                        android:maxLines="3"
                        android:scrollbars="vertical"
                        android:inputType="textMultiLine"
                        android:textColorHint="@color/editTextHintColor"
                        />




                    <com.tradesman.provider.component.MyFontOpenRegEditText
                        android:id="@+id/edtRegisterEmail"
                        style="@style/editTextBox"
                        android:layout_marginTop="5dp"
                        android:drawableLeft="@drawable/email_icon"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/editTextHintColor" />


                    <com.tradesman.provider.component.MyFontOpenRegEditText
                        android:id="@+id/edtRegisterPassword"
                        style="@style/editTextBox"
                        android:layout_marginTop="5dp"
                        android:drawableLeft="@drawable/password_icon"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:textColorHint="@color/editTextHintColor" />


                    <com.tradesman.provider.component.MyFontOpenRegEditText
                        android:id="@+id/edtRegisterConformPassword"
                        style="@style/editTextBox"
                        android:layout_marginTop="5dp"
                        android:drawableLeft="@drawable/password_icon"
                        android:hint="@string/confirm_password_hint"
                        android:inputType="textPassword"
                        android:textColorHint="@color/editTextHintColor" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/box_email"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtCountryCodeRegister"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"

                            android:drawableLeft="@drawable/contact_number"
                            android:drawablePadding="8dp"
                            android:paddingLeft="@dimen/padding_editext"
                            android:paddingRight="10dp"
                            android:text="+27"
                            android:textSize="17sp" />

                        <View
                            android:layout_width="2dp"
                            android:layout_height="@dimen/view_sise"
                            android:layout_margin="5dp"
                            android:background="@color/color_decsriptipn" />

                        <com.tradesman.provider.component.MyFontOpenRegEditText
                            android:id="@+id/edtRegisterConatctNo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="1dp"
                            android:background="@color/whiteColor"
                            android:hint="@string/contact_no_hint"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:paddingLeft="10dp"
                            android:textColorHint="@color/editTextHintColor" />

                    </LinearLayout>


                    <com.tradesman.provider.component.MyFontOpenRegEditText
                        android:id="@+id/edtAddressRegister"
                        style="@style/editTextBox"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:drawableLeft="@drawable/address_icon"
                        android:hint="@string/address_hint"
                        android:inputType="textNoSuggestions"
                        android:textColorHint="@color/editTextHintColor" />

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center_vertical"-->

                        <!--android:drawablePadding="8dp"-->
                        <!--android:paddingLeft="@dimen/padding_editext"-->
                        <!--android:paddingRight="10dp"-->
                        <!--android:text="If you were referred, Enter the key Below"-->
                        <!--android:textColor="@color/colorPrimary"-->
                        <!--android:textSize="17sp" />-->

                    <!--<com.tradesman.provider.component.MyFontOpenRegEditText-->
                        <!--android:id="@+id/edtRef"-->
                        <!--style="@style/editTextBox"-->
                        <!--android:layout_marginBottom="5dp"-->
                        <!--android:layout_marginTop="5dp"-->
                        <!--android:drawableLeft="@drawable/address_icon"-->
                        <!--android:hint="Enter Reference Key (Optional)"-->
                        <!--android:inputType="textNoSuggestions"-->
                        <!--android:textColorHint="@color/editTextHintColor" />-->


                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <com.tradesman.provider.component.MyFontOpenRegButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_shape"
            android:text="@string/register_button_text"
            android:textAllCaps="false"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/text_size_register_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.tradesman.provider.component.MyFontOpenRegTextView
                android:id="@+id/txthaveaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_account"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/do_not_have_account_textsize" />

            <com.tradesman.provider.component.MyFontRaidProBoldTextView
                android:id="@+id/txtSigninText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/register_padding"
                android:text="@string/sign_in"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/register_txt_size"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
